--- a/pom.xml
+++ b/pom.xml
@@ -267,38 +267,202 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
-
+	
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<compilerArgs>
-						<arg>-Xlint:unchecked</arg>
-						<!-- <classpath>${java.home}/lib/tools.jar</classpath> -->
-					</compilerArgs>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<configuration>
-					<argLine>
-						-Dgemfire.log-level=warning
-					</argLine>
-					<includes>
-						<include>**/*Test.java</include>
-						<include>**/*Tests.java</include>
-					</includes>
-					<reuseForks>false</reuseForks>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+      <sourceDirectory>C:\MVN\src\main\java</sourceDirectory>
+      <scriptSourceDirectory>C:\MVN\src\main\scripts</scriptSourceDirectory>
+      <testSourceDirectory>C:\MVN\src\test\java</testSourceDirectory>
+      <outputDirectory>C:\MVN\target\classes</outputDirectory>
+      <testOutputDirectory>C:\MVN\target\test-classes</testOutputDirectory>
+      <resources>
+         <resource>
+            <directory>C:\MVN\src\main\resources</directory>
+         </resource>
+      </resources>
+      <testResources>
+         <testResource>
+            <directory>C:\MVN\src\test\resources</directory>
+         </testResource>
+      </testResources>
+      <directory>C:\MVN\target</directory>
+      <finalName>springproject-1.0</finalName>
+      <pluginManagement>
+         <plugins>
+            <plugin>
+               <artifactId>maven-antrun-plugin</artifactId>
+               <version>1.3</version>
+            </plugin>
+            <plugin>
+               <artifactId>maven-assembly-plugin</artifactId>
+               <version>2.2-beta-5</version>
+            </plugin>
+            <plugin>
+               <artifactId>maven-dependency-plugin</artifactId>
+               <version>2.8</version>
+            </plugin>
+            <plugin>
+               <artifactId>maven-release-plugin</artifactId>
+               <version>2.5.3</version>
+            </plugin>
+         </plugins>
+      </pluginManagement>
+      <plugins>
+         <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.5</version>
+            <executions>
+               <execution>
+               <id>default-clean</id>
+               <phase>clean</phase>
+               <goals>
+                  <goal>clean</goal>
+               </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>2.6</version>
+            <executions>
+               <execution>
+                  <id>default-testResources</id>
+                  <phase>process-test-resources</phase>
+                  <goals>
+                     <goal>testResources</goal>
+                  </goals>
+               </execution>
+               <execution>
+                  <id>default-resources</id>
+                  <phase>process-resources</phase>
+                  <goals>
+                     <goal>resources</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+               <execution>
+                  <id>default-jar</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>jar</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <executions>
+               <execution>
+                  <id>default-compile</id>
+                  <phase>compile</phase>
+                  <goals>
+                     <goal>compile</goal>
+                  </goals>
+               </execution>
+               <execution>
+                  <id>default-testCompile</id>
+                  <phase>test-compile</phase>
+                  <goals>
+                     <goal>testCompile</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.12.4</version>
+            <executions>
+               <execution>
+                  <id>default-test</id>
+                  <phase>test</phase>
+                  <goals>
+                     <goal>test</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-install-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+               <execution>
+                  <id>default-install</id>
+                  <phase>install</phase>
+                  <goals>
+                     <goal>install</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.7</version>
+            <executions>
+               <execution>
+                  <id>default-deploy</id>
+                  <phase>deploy</phase>
+                  <goals>
+                     <goal>deploy</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.3</version>
+            <executions>
+               <execution>
+                  <id>default-site</id>
+                  <phase>site</phase>
+                  <goals>
+                     <goal>site</goal>
+                  </goals>
+                  <configuration>
+                     <outputDirectory>C:\MVN\target\site</outputDirectory>
+                     <reportPlugins>
+                        <reportPlugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-project-info-reports-plugin</artifactId>
+                        </reportPlugin>
+                     </reportPlugins>
+                  </configuration>
+               </execution>
+               <execution>
+                  <id>default-deploy</id>
+                  <phase>site-deploy</phase>
+                  <goals>
+                     <goal>deploy</goal>
+                  </goals>
+                  <configuration>
+                     <outputDirectory>C:\MVN\target\site</outputDirectory>
+                     <reportPlugins>
+                        <reportPlugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-project-info-reports-plugin</artifactId>
+                        </reportPlugin>
+                     </reportPlugins>
+                  </configuration>
+               </execution>
+            </executions>
+            <configuration>
+               <outputDirectory>C:\MVN\target\site</outputDirectory>
+               <reportPlugins>
+                  <reportPlugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-project-info-reports-plugin</artifactId>
+                  </reportPlugin>
+               </reportPlugins>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
+   <reporting>
+      <outputDirectory>C:\MVN\target\site</outputDirectory>
+   </reporting>
 
 </project>
