--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,8 @@
 	</developers>
 
 	<properties>
-		<java.version>[1.7,1.9)</java.version>
-		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<source.level>${java.version}</source.level>
+		<maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 		<apache-geode.version>1.15.1</apache-geode.version>
 		<assertj.version>3.23.1</assertj.version>
 		<jakarta-annotation-api.version>2.0.0</jakarta-annotation-api.version>
